...
    static let shared = AlertService()
    private init() {}
    
    //MARK: - Methods
    
    func showAlert(model: AlertModel)  -> UIAlertController {
        let alert = UIAlertController(
            title: model.title,
            message: model.message,
            preferredStyle: .alert)
        alert.view.accessibilityIdentifier = "alert"
        model.buttons.forEach { button in
            let action = UIAlertAction(
...
            buttons: [firstButton, secondButton])
        vc?.present(showAlert(model: model), animated: true)
    }
    
    func showSureToLogout(on vc: UIViewController?, _ completion: @escaping () -> Void) {
        let firstButton = AlertButton(
            title: "Да",
            completion: completion)
        let secondButton = AlertButton(
            title: "Нет")
        let model = AlertModel(
            title: "Пока, пока!",
            message: "Уверены что хотите выйти?",
...
