...
        let dateLabel = UILabel()
        dateLabel.translatesAutoresizingMaskIntoConstraints = false
        dateLabel.font = .systemFont(ofSize: 13)
        dateLabel.textColor = .ypWhite
        return dateLabel
    } ()
    private lazy var likeButton: UIButton = {
        let likeButton = UIButton()
        likeButton.translatesAutoresizingMaskIntoConstraints = false
        likeButton.setImage(UIImage(named: "no_active_like"), for: .normal)
        return likeButton
    } ()
    
...
        with photo: Photo,
        _ completion: @escaping (Result<Void?, Error>) -> Void
    ) {
        likeButton.imageView?.image = photo.isLiked ?
                                UIImage(named: "active_like") :
                                UIImage(named: "no_active_like")
        likeButton.accessibilityIdentifier = photo.isLiked ? "dislikeButton" : "likeButton"
        dateLabel.text = ImagesListCell.dateFormatter.string(for: photo.createdAt)
        imageOfCell.kf.indicatorType = .activity
        imageOfCell.kf.setImage(
            with: photo.smallImageURL,
            placeholder: UIImage(named: "image_placeholder")) { [weak self] result in
                guard let self else { return }
...
