...
    private lazy var logo: UIImageView = {
        let logo = UIImageView(image: UIImage(named: "unsplash_logo"))
        logo.contentMode = .scaleAspectFit
        logo.translatesAutoresizingMaskIntoConstraints = false
        return logo
    } ()
    private lazy var enterButton: UIButton = {
        let enterButton = UIButton(type: .custom)
        enterButton.translatesAutoresizingMaskIntoConstraints = false
        enterButton.setTitle("Войти", for: .normal)
        enterButton.setTitleColor(.ypBlack, for: .normal)
        enterButton.titleLabel?.font = .systemFont(ofSize: 17, weight: .bold)
        enterButton.backgroundColor = .ypWhite
...
